Add high-level API for method argument handling
This adds the `init::method::Varargs` type, moving logic for argument
checking and error reporting out of the macro, into proper library code.
This is the first step in simplifying the `godot_wrap_method` macro.

--- a/gdnative-core/Cargo.toml
+++ b/gdnative-core/Cargo.toml
@@ -23,6 +23,7 @@ approx = "0.3.2"
 euclid = "0.22.1"
 indexmap = "1.6.0"
 ahash = "0.4.5"
+thiserror = "1.0"
 
 gdnative-impl-proc-macros = { path = "../impl/proc_macros", version = "=0.9.1" }
 
