Construct Godot API objects from class names
This adds the `Ref::<T>::by_class_name` constructor that instantiates a
sub-class of `T` by its name. If the resulting object cannot be casted to
`T`, it is correctly freed depending on whether it is a `Reference`, and
`None` is returned. As with `Ref::cast`, there is the caveat that reference-
counted classes cannot be casted to `Object`s, since memory management is
determined statically.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -227,13 +227,25 @@ jobs:
           cd test;
           mkdir -p ./project/lib;
           cp ../target/debug/libgdnative_test.so ./project/lib/;
-          "${{ runner.temp }}/godot_bin/Godot_v${GODOT_VER}-${GODOT_REL}_linux_headless.64" --path ./project/;
-          "${{ runner.temp }}/godot_bin/Godot_v${GODOT_VER}-${GODOT_REL}_linux_headless.64" -e --path ./project/ --run-editor-tests;
+          "${{ runner.temp }}/godot_bin/Godot_v${GODOT_VER}-${GODOT_REL}_linux_headless.64" --path ./project/ > >(tee "${{ runner.temp }}/stdout.log");
+          if grep -q "Leaked instance" "${{ runner.temp }}/stdout.log"; then
+            exit 1;
+          fi;
+          "${{ runner.temp }}/godot_bin/Godot_v${GODOT_VER}-${GODOT_REL}_linux_headless.64" -e --path ./project/ --run-editor-tests > >(tee "${{ runner.temp }}/stdout.log");
+          if grep -q "Leaked instance" "${{ runner.temp }}/stdout.log"; then
+            exit 1;
+          fi;
           cargo build --features=type_tag_fallback;
           mkdir -p ./project/lib;
           cp ../target/debug/libgdnative_test.so ./project/lib/;
-          "${{ runner.temp }}/godot_bin/Godot_v${GODOT_VER}-${GODOT_REL}_linux_headless.64" --path ./project/;
-          "${{ runner.temp }}/godot_bin/Godot_v${GODOT_VER}-${GODOT_REL}_linux_headless.64" -e --path ./project/ --run-editor-tests;
+          "${{ runner.temp }}/godot_bin/Godot_v${GODOT_VER}-${GODOT_REL}_linux_headless.64" --path ./project/ > >(tee "${{ runner.temp }}/stdout.log");
+          if grep -q "Leaked instance" "${{ runner.temp }}/stdout.log"; then
+            exit 1;
+          fi;
+          "${{ runner.temp }}/godot_bin/Godot_v${GODOT_VER}-${GODOT_REL}_linux_headless.64" -e --path ./project/ --run-editor-tests > >(tee "${{ runner.temp }}/stdout.log");
+          if grep -q "Leaked instance" "${{ runner.temp }}/stdout.log"; then
+            exit 1;
+          fi;
           
   # This job doesn't actually test anything, but they're used to tell bors the
   # build completed, as there is no practical way to detect when a workflow is
