--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,9 +32,15 @@ jobs:
           CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_TOKEN }}
         run: |
           (cd impl/proc_macros && cargo publish);
+          sleep 1m;
           (cd gdnative-sys && cargo publish);
+          sleep 1m;
           (cd gdnative-derive && cargo publish);
+          sleep 1m;
           (cd gdnative-core && cargo publish);
+          sleep 1m;
           (cd bindings_generator && cargo publish);
+          sleep 1m;
           (cd gdnative-bindings && cargo publish);
+          sleep 1m;
           (cd gdnative && cargo publish);
