--- a/gdnative-core/Cargo.toml
+++ b/gdnative-core/Cargo.toml
@@ -20,7 +20,7 @@ type_tag_fallback = []
 gdnative-sys = { path = "../gdnative-sys", version = "0.9.3" }
 libc = "0.2"
 approx = "0.4.0"
-euclid = "0.22.1"
+glam = "0.13.0"
 indexmap = "1.6.0"
 ahash = "0.7.0"
 
